--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-
+  <link rel="shortcut icon" href="favicon.ico">
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="description" content="This page is about Anish's resume and his job title on being a Software Engineer.">
+  <meta name="author" content="862282564">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Anish Nalluri - Software Engineer</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +26,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Anish Nalluri</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="anishnalluri.jpg.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +57,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Anish Nalluri
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <div class="subheading mb-5">Software Engineer📚</div>
+        <p class="lead mb-4">I'm a committed, results-oriented software engineer that loves creating and putting into practice creative solutions. With a strong background in computer science and a wealth of practical experience, I offer a special combination of technical know-how and problem-solving abilities to any project I work on. My career path has been characterized by a dedication to quality, flexibility, and an unceasing quest for knowledge within the ever-evolving domain of software engineering. Throughout my career, I have successfully navigated various aspects of the software development life cycle. My proficiency spans the entire spectrum, from requirement analysis and system design to coding, testing, and deployment. I have worked on diverse projects, ranging from large-scale enterprise applications to specialized software solutions. This breadth of experience has honed my ability to tailor my approach to different challenges, ensuring optimal outcomes for each unique scenario. I have successfully negotiated several facets of the software development life cycle throughout my career. I am skilled in all areas, including requirement analysis, system design, coding, testing, and deployment. I have experience working on a variety of projects, from specialist software solutions to large-scale business applications. This depth of expertise has improved my capacity to modify my strategy in response to various obstacles, guaranteeing the best results for every distinct situation.
+        <br><br>
+        In my most recent position, I interned, developed, and improved the company's flagship product at Hewlett Packard Enterprises as a Software Engineer. I worked closely with cross-functional teams to gather needs and convert them into technical specifications that could be put into practice, including quality assurance and product managers. I helped ensure that software increments were delivered quickly and in line with customer and business objectives by utilizing agile approaches. In addition, I have a track record of successfully analyzing and debugging complicated problems using methodical techniques to find the sources of problems and apply workable fixes. My proficiency in examining and refining current codebases has resulted in increased system dependability and performance. I place a high priority on keeping up with new developments in technology and business trends. I also constantly update my skill set to include the newest frameworks and tools. Apart from my technical proficiency, I am renowned for my proficient communication qualities and cooperative approach. I appreciate clear and honest communication in teams, creating a space where concepts can flow freely and group problem-solving is welcomed. In addition to fostering greater team cohesion, this strategy has helped projects be successfully completed on schedule.
+        <br><br>
+        I have a strong commitment to fostering an inclusive and cooperative work environment. Throughout my professional life, I have promoted knowledge-sharing programs and organized internal training sessions to equip team members with fresh abilities and approaches. This not only improves the team's overall performance but also cultivates a culture of learning and growth among its members. I am excited to contribute to innovative projects in the future that will push and broaden my skill set. I'm still fully committed to providing top-notch software solutions, and I'm excited to use my experience to take on fresh, interesting problems in the rapidly changing field of software engineering. I'm still passionate about innovation and firmly committed to making a significant contribution to the field of software engineering as I move forward in my career. I look forward to the chance to use my knowledge and expertise in next initiatives that push the limit of technological advancement and challenge the current status quo.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/anish-nalluri">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/anish-nalluri">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/anish13517">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:anish.nalluri@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -93,47 +92,46 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Hewlett Packard Enterprises</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Interned at Hewlett Packard enterprises and worked closely with employees to see their day to day lifestyle<br> 
+              • Created various websited for engagement and marketing purposes<br>
+              • Experience with programming languages such as HTML, Python, Javascript<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2021 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">California State Treasurer</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Interned under the California State Treasurer and EDD to allow people to get their unemployment benefits<br>
+              • Speaker at senate meetings and worked closely with other government officials<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2020 - June 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Program Advisor</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Worked in Residential Life for incoming Freshman living in the dorms<br>
+            • Created a variety of programs that encompassed learning goals a community engagement for residents<br>
+            • Helped clear up any problems and conflicts between residents and contributed to the overall positivity of their first year experience<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2022 - Present</span>
           </div>
         </div>
 
@@ -151,34 +149,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelors in Biology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - June 2024</span>
           </div>
         </div>
 
@@ -191,7 +166,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image 1 (1).jpg" width="500px">
+            <img src="img/image 2 (1).jpg" width="500px"><br>
+            <img src="img/image 3 (1).jpg" width="500px">
+            <img src="img/image 4 (1).jpg" width="500px"><br>
+            <img src="img/image 5 (1).jpg" width="500px">
+            <img src="img/image 6 (1).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Anish Nalluri</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
